<resources>
    <string name="app_name">My Singapore - Islands Galore (Dialog)</string>
    <string name="a">Name</string>
    <string name="hint_a">Enter name here</string>
    <string name="description">Description</string>
    <string name="hint_description">Enter description here</string>
    <string name="squarekm">Square Km</string>
    <string name="hint_squarekm">Enter Square Km</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Insert Island</string>
    <string name="title_activity_second">Show Islands</string>
    <string name="title_activity_third">Modify Island</string>

    <string name="id">ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all islands with 5 stars</string>
</resources>
